Fix accordion details marker on iOS

--- a/web/components/Accordion/Accordion.module.scss
+++ b/web/components/Accordion/Accordion.module.scss
@@ -3,6 +3,10 @@
   display: block;
   cursor: pointer;
   position: relative;  
+
+  &::-webkit-details-marker {
+    display: none;
+  }  
 }
 
 .icon {
